# src/backend/HomeCloud.Maps.Application/Handlers/Tours/GetTourInfoPaginationRequest.cs
@@ -1,4 +1,5 @@
 ﻿using HomeCloud.Maps.Application.Database;
+using HomeCloud.Maps.Application.Dto;
 using HomeCloud.Maps.Application.Dto.Tours;
 using MediatR;
 using System;
@@ -10,14 +11,14 @@ using System.Threading.Tasks;
 
 namespace HomeCloud.Maps.Application.Handlers.Tours
 {
-    public class GetTourInfoPaginationRequest : IRequest<IEnumerable<TourInfoDto>>
+    public class GetTourInfoPaginationRequest : IRequest<PaginationResult<TourInfoDto>>
     {
         public string UserId { get; init; }
 
         public Page Page { get; init; }
     }
 
-    public class GetTourInfoPaginationHandler : IRequestHandler<GetTourInfoPaginationRequest, IEnumerable<TourInfoDto>>
+    public class GetTourInfoPaginationHandler : IRequestHandler<GetTourInfoPaginationRequest, PaginationResult<TourInfoDto>>
     {
         private readonly IRepository _repository;
 
@@ -26,12 +27,12 @@ namespace HomeCloud.Maps.Application.Handlers.Tours
             _repository = repository;
         }
 
-        public async Task<IEnumerable<TourInfoDto>> Handle(GetTourInfoPaginationRequest request, CancellationToken cancellationToken)
+        public async Task<PaginationResult<TourInfoDto>> Handle(GetTourInfoPaginationRequest request, CancellationToken cancellationToken)
         {
-            var tours = await _repository.TourInfoCollection
-                .FindAsync(x => x.UserId == request.UserId, request.Page.Index, request.Page.Size);
+            var result = await _repository.TourInfoCollection
+                .FindPageAsync(x => x.UserId == request.UserId, request.Page.Index, request.Page.Size);
 
-            return tours.Select(x => new TourInfoDto
+            var tours = result.Page.Select(x => new TourInfoDto
             {
                 TourId = x.TourId,
                 Date = x.Date,
@@ -39,6 +40,12 @@ namespace HomeCloud.Maps.Application.Handlers.Tours
                 Distance = x.Distance,
                 ImageUrl = x.ImageUrl,
             }).ToList();
+
+            return new PaginationResult<TourInfoDto>
+            {
+                Data = tours,
+                Total = (int)result.Count
+            };
         }
     }
 }
